# rust-delta

./: .gitignore  Cargo.toml  README.md
examples/: bronze_silver_stream.rs  merge_minimal.rs  simple_client.rs
src/: client.rs  dataframe.rs  error.rs  lib.rs  main.rs  operations.rs  utils.rs
tests/: client_tests.rs  dataframe_tests.rs  error_tests.rs  integration_tests.rs  lib_tests.rs  operations_tests.rs  readme_doctest.rs  utils_tests.rs
